/*
 * Copyright (C) 2025 Kevin Buzeau
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
option java_multiple_files = true;

package com.buzbuz.smartautoclicker.core.smart.debugging;

/** Overview of the detection session. */
message DebugReportOverview {

    /** Unique identifier of the scenario that was ran to made this report. */
    int64 scenarioId = 1;

    /** The duration of the detection session in milliseconds. */
    int64 durationMs = 2;

    /** The number of frames processed during the session. */
    int64 frameCount = 3;

    /** The average duration of a frame processing in milliseconds. */
    int64 averageFrameProcessingDurationMs = 4;

    /** The number of image events that have been triggered during the session. */
    int32 imageEventFulfilledCount = 5;

    /** The number of image events that have been triggered during the session. */
    int32 triggerEventFulfilledCount = 6;

    /** The list of counter name for this scenario. */
    repeated string countersName = 7;
}